Made the Create page responsive all the way to 320px width and fixed up the last flaws in the positioning of the inputs also fixed some jsx issues , added a horizontal scrollbar on one of the tables (oopsy forgot the 2nd one)

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  overflow-x: hidden;
 }
 
 nav {
@@ -42,7 +43,7 @@ nav .nav-left a:hover {
   color: rgb(204, 204, 204);
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 790px) {
   nav {
     flex-direction: column;
     align-items: center;
@@ -91,21 +92,28 @@ nav .nav-left a:hover {
 .container {
   display: flex;
   flex-wrap: wrap;
-  width: 500px;
+  width: 600px;
   margin: 0 auto;
+  justify-content: flex-end;
+}
+
+.container .inputContainer {
+  display: flex;
+  width: 70%;
+  padding-bottom: 20px;
 }
 
 .container label {
   display: flex;
-  align-items: center;
-  width: 100%;
-  padding-bottom: 20px;
+  width: 28%;
+  height: 46px;
+  margin: 0;
+  margin-left: 5px;
 }
 
 .container h4 {
-  align-items: center;
-  width: 30%;
-  margin: 0;
+  margin: auto 0;
+  font-size: 1.2rem;
 }
 
 .container #date,
@@ -113,33 +121,36 @@ nav .nav-left a:hover {
   width: 100%;
 }
 
-.container label .smaller-width {
+.container .smaller-width {
   width: 40%;
-  margin-right: 15px;
 }
 
-.container label .left {
-  width: 35%;
-  margin-left: 155px;
+.container .right {
+  margin-left: auto;
 }
 
 .container input {
-  width: 120px;
   height: 40px;
   text-align: center;
   background-color: #6e6e6e;
   border-radius: 15px;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
-
 
 .container .formHeader {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   width: 100%;
-  gap: 80px;
-  height: 50px;
   margin-bottom: 50px;
+}
+
+.positHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 80px;
+  width: 70%;
+  height: 50px;
 }
 
 .divider {
@@ -149,8 +160,8 @@ nav .nav-left a:hover {
   height: 100%;
 }
 
-
 .button {
+  margin: 0 auto;
   background-color: rgb(190, 225, 255);
   width: 150px;
   height: 40px;
@@ -158,7 +169,71 @@ nav .nav-left a:hover {
   margin-bottom: 50px;
 }
 
+@media screen and (max-width: 600px) {
+  .container {
+    width: 520px;
+  }
 
+  .positHeader {
+    gap: 50px;
+  }
+}
+
+
+@media screen and (max-width: 520px) {
+  .container {
+    width: 400px;
+  }
+  
+  .positHeader {
+    gap: 40px;
+  }
+
+  .container h4 {
+    font-size: 1rem;
+  }
+
+}
+
+@media screen and (max-width: 400px) {
+  .container {
+    width: 340px;
+  }
+  
+  .positHeader {
+    gap: 10px;
+    font-size: 0.8rem;
+  }
+
+  .positHeader h1 {
+    margin-top: 25px;
+  }
+
+  .container h4 {
+    font-size: 0.9rem;
+  }
+
+}
+
+@media screen and (max-width: 360px) {
+  .container {
+    width: 300px;
+  }
+  
+  .positHeader {
+    gap: 10px;
+    font-size: 0.8rem;
+  }
+
+  .positHeader h1 {
+    margin-top: 25px;
+  }
+
+  .container h4 {
+    font-size: 0.9rem;
+  }
+
+}
 
 
 
@@ -191,4 +266,20 @@ tbody > tr:nth-of-type(even) {
 
 tbody > tr:nth-of-type(odd) {
   background-color: rgb(206, 206, 206);
+}
+
+
+
+@media screen and (max-width: 790px) {
+  table {
+    width: 700px;
+    font-size: 0.6rem;
+  }
+
+  .horizontal-scroll {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: thin;
+  }
 }
